--- a/init.org
+++ b/init.org
@@ -87,7 +87,6 @@ repositories. We first list these packages:
                        counsel
                        counsel-world-clock
                        color-theme-sanityinc-tomorrow 
-                       dim
                        dimmer
                        dired+
                        dired-narrow
@@ -116,18 +115,18 @@ repositories. We first list these packages:
                        multiple-cursors
                        neotree
                        nord-theme
-                       pdf-tools
-                       polymode
                        org
                        org-bullets
                        org-plus-contrib
-                       powerline
+                       pdf-tools
+                       polymode
                        rubik
                        smex
                        sql-indent
                        sqlup-mode
                        string-inflection
-                       sudden-death 
+                       sudden-death
+                       tango-plus-theme
                        toc-org
                        web-mode
                        xkcd
@@ -219,7 +218,9 @@ day, and [[https://github.com/arcticicestudio/nord-emacs][Nord Emacs]] at night 
   ;; (setq calendar-latitude 43.6108)
   ;; (setq calendar-longitude 3.8767)
   ;; (setq calendar-location-name "Montpellier, FR")
-  (setq circadian-themes '((:sunrise . apropospriate-light)
+  ;; (setq circadian-themes '((:sunrise . apropospriate-light)
+  ;;                          (:sunset  . nord)))
+  (setq circadian-themes '((:sunrise . tango-plus)
                            (:sunset  . nord)))
   (circadian-setup)
 #+END_SRC
@@ -473,7 +474,6 @@ the code is already indented) for Programming mode:
   ;;             (hs-org/minor-mode)
   ;;             (local-set-key [(ctrl shift f10)] 'hs-toggle-hiding)
   ;;             ))
-  ;; (dim-minor-name 'hs-minor-mode "")
 #+END_SRC
 
 Saveplace: Go back to last position where the point was in a file
@@ -527,19 +527,31 @@ Bookmarks are saved in =.emacs.d/cache/bookmarks=, are set with
 
 ** Mode line
 
-Use a Power line:
-
-(to be replaced by =[[https://github.com/tarsius/moody][moody]]= after Emacs 25.3)
-
-#+BEGIN_SRC emacs-lisp
-  (powerline-center-theme)
-  (setq powerline-default-separator 'wave)
-#+END_SRC
-
-Display line and column number in the mode line:
+Add column number to the mode line:
 
 #+BEGIN_SRC emacs-lisp
   (column-number-mode 1)
+#+END_SRC
+
+Custom mode-line, mostly simplified (shows if file modified, file
+name, Git branch, remote file, line:col (percent), and major mode):
+
+#+BEGIN_SRC emacs-lisp
+  (setq-default mode-line-format (list
+                                  "%e"  ; Error message about full memory
+                                  mode-line-front-space
+                                  "%* " ; Modified or read-only buffer
+                                  ;; mode-line-frame-identification
+                                  mode-line-buffer-identification
+                                  '(vc-mode vc-mode)
+                                  "   "
+                                  mode-line-remote ; Remote file?
+                                  "   %l:%c (%p)   " ; line number : column number (percent)
+                                  "   %m   " ; Only major mode
+                                  ;; mode-line-modes ; This includes minor modes
+                                  ;; mode-line-misc-info ; Not sure…
+                                  mode-line-end-spaces
+                                  ))
 #+END_SRC
 
 [[https://github.com/syohex/emacs-anzu][Anzu]]: display current match and total matches information in the
@@ -549,29 +561,10 @@ mode-line, and show replacement interactively. Replace is bound to
 #+BEGIN_SRC emacs-lisp
   (global-anzu-mode 1)
   (anzu-mode 1)
-  (dim-minor-name 'anzu-mode "")
   (global-set-key (kbd "C-r") 'anzu-query-replace)
   (global-set-key (kbd "C-M-r") 'anzu-query-replace-regexp)
 #+END_SRC
 
-"Diminish" =auto-fill= (automatically break long lines while typing),
-=auto-revert= (which is used by Magit to automatically update file
-content), =visual-line-mode= (word wrapping at the end of long lines),
-=eldoc= (display function arguments in the minibuffer), Lisp
-Interaction (replaced with just "Lisp"):
-
-(to be replaced by =[[https://github.com/tarsius/minions][minions]]= after Emacs 25.3)
-
-#+BEGIN_SRC emacs-lisp
-  (dim-minor-name 'auto-fill-function "")
-  (dim-minor-name 'auto-revert-mode "")
-  (dim-minor-name 'visual-line-mode "")
-  (dim-minor-name 'eldoc-mode "")
-  (dim-minor-name 'eldoc-mode "")
-  (add-hook 'emacs-lisp-mode-hook 
-            (lambda()
-              (setq mode-name "Lisp")))
-#+END_SRC
 
 
 ** Minibuffer
@@ -735,12 +728,10 @@ in the variable =fill-column=); turn it on and off with ~C-c q~:
   (global-set-key (kbd "C-c q") 'auto-fill-mode)
 #+END_SRC
 
-Consider CamelCase as two words in programming modes (but don't show
-it with "," in the mode line):
+Consider CamelCase as two words in programming modes:
 
 #+BEGIN_SRC emacs-lisp
   (add-hook 'prog-mode-hook 'subword-mode)
-  (dim-minor-name 'subword-mode "" 'subword)
 #+END_SRC
 
 Cycle between snake_case, lowerCamelCase and kebab-case using ~C-c
@@ -775,7 +766,6 @@ aggressive completion:
 
 #+BEGIN_SRC emacs-lisp
   (add-hook 'after-init-hook 'global-company-mode)
-  (dim-minor-name 'company-mode "" 'company)
   (with-eval-after-load 'company
     (define-key company-active-map (kbd "TAB") #'company-complete-common)
     (define-key company-active-map [tab] #'company-complete-common))
@@ -999,8 +989,7 @@ already disable entirely below:
 
 [[https://magit.vc/][Magit]] is a interface to Git completely integrated to Emacs. Once
 installed, it pretty much works out of the box, there are just a
-couple of settings to make it even smoother (remove Git from the list
-of backends handled by Emacs version control; use Ivy to complete;
+couple of settings to make it even smoother (use Ivy to complete;
 links to Git-man; automatically refresh the repository's status after
 file save). We also bound Magit to ~F8~, and integrate Git-flow to
 Magit (=magit-gitflow=, started with ~C-f~ from within Magit):
@@ -1009,8 +998,8 @@ Magit (=magit-gitflow=, started with ~C-f~ from within Magit):
   (load-library "magit-repository-directories")
   (shell-command "git config --global status.showUntrackedFiles all") ; List files in folders
   (global-set-key [(f8)] 'magit-status)
-  ;; (setq vc-handled-backends (delq 'Git vc-handled-backends))
-  (setq vc-handled-backends nil)
+  ;; (setq vc-handled-backends (delq 'Git vc-handled-backends)) ; Remove Git from the list of backends handled by Emacs version control
+  ;; (setq vc-handled-backends nil) ; Remove VC altogether
   (setq
    magit-completing-read-function 'ivy-completing-read
    magit-view-git-manual-method 'man
@@ -1366,8 +1355,6 @@ compilation as PDF [P], forward and inverse search [S]):
               (outline-minor-mode 1)	; Fold LaTeX sections
               (TeX-fold-mode 1)         ; Fold LaTeX environments
               ))
-  (dim-minor-name 'reftex-mode "" 'reftex)
-  (dim-minor-name 'outline-minor-mode "" 'outline)
 #+END_SRC
 
 The compilation by LatexMk (a single call to perform all necessary
@@ -1868,11 +1855,6 @@ with R:
   (add-to-list 'auto-mode-alist '("\\.[rR]nw\\'" . poly-noweb+r-mode))
   (add-to-list 'auto-mode-alist '("\\.org\\'" . poly-org-mode))
 #+END_SRC
-
-# Diminish them?
-# (with-eval-after-load 'poly-markdown-mode (diminish 'poly-markdown-mode))
-# (with-eval-after-load 'poly-markdown+r-mode (diminish 'poly-markdown+r-mode))
-# (with-eval-after-load 'poly-noweb+r-mode (diminish 'poly-noweb+r-mode))
 
 Navigate through chunks: ~C-PageUp~ / ~C-PageDown~ go to previous/next
 chunk; ~C-S-PageUp~ / ~C-S-PageDown~ go to previous/next chunk of the
